[package]
name = "sgf-parser"
version = "0.1.0"
authors = ["Michael A. Plikk <michael@plikk.com>"]
edition = "2018"
license = "MIT"
description = "A library for parsing SGF files"
repository = "https://github.com/mipli/sgf-parser"
readme = "README.md"
keywords = ["parser", "sgf", "go", "baduk", "weiqi"]

[dependencies]
nom = "4.1.1"
